# nse-spider

./: input.yaml  nse_quotes.json  nse_scraper.py  pyproject.toml  rebalance.py  requirements.txt
